# codetracer

./: .babelrc  .cspell.json  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .projectile  0005-python-recorder-db-backend-integration.md  0006-build-system-consolidation.md  0006-ct-host-reload-resilience.md  0006-ct-record-script-args.md  0006-tup-build-staging-area.md  0007-ct-host-heartbeat-and-idle-timeout.md  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  COPYRIGHT  LICENSE  PLAN_OPEN_DIR.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  badge.json  build-system-consolidation-plan.md  build-system-consolidation-status.md  build_extension_files.sh  build_for_extension.sh  build_ui_js.sh  config.nims  config.toml  ct-dap.md  ct-host-heartbeat-and-idle-timeout-implementation-plan.md  (+35 more)
build-python/: LICENSE  MANIFEST.in  README.md  setup.cfg
build-python/scripts/: download_ct_remote.sh
build-python/src/ct/: __init__.py  cli.py  runtime.py
build-python/tests/: test_runtime.py
libs/ct-dap-client/: Cargo.toml
libs/ct-dap-client/src/: client.rs  lib.rs  protocol.rs  transport.rs
libs/origin-classifier/: Cargo.toml
libs/origin-classifier/src/: ast.rs  classify.rs  kinds.rs  lib.rs  patterns.rs
libs/origin-classifier/tests/: m1_verification.rs
python-api/: pyproject.toml
python-api/codetracer/: __init__.py  __init__.pyi  connection.py  connection.pyi  exceptions.py  exceptions.pyi  origin.py  trace.py  trace.pyi  types.py  types.pyi
python-api/examples/: mcr_memory_diff_bisect.py  mcr_record_vs_replay_bisect.py
python-api/tests/: test_origin.py
src/backend-manager/: CLAUDE.md  Cargo.toml  Tupfile
src/backend-manager/src/: backend_manager.rs  browser_stream_host.rs  browser_stream_receiver.rs  config.rs  dap_init.rs  dap_parser.rs  errors.rs  main.rs  mcp_server.rs  meta_dat.rs  observability_fetch.rs  origin_renderer.rs  paths.rs  python_bridge.rs  script_executor.rs  session.rs  trace_metadata.rs
src/backend-manager/tests/: daemon_integration.rs  dive_in_url_fetch_test.rs  mcp_integration.rs  mcp_origin_test.rs  meta_dat_metadata_loading.rs  real_recording_integration.rs
src/codetracer-bench/: Cargo.toml
src/codetracer-bench/src/: dap_driver.rs  gui_ops.rs  lib.rs  native_omniscient_timing.rs  omniscient_db_size.rs  slice_prep_speed.rs
src/codetracer-bench/tests/: gui_ops_tests.rs  omniscient_db_size_tests.rs  record_via_ct_test.rs  rr_product_omniscient_e2e_test.rs  slice_prep_speed_tests.rs
src/db-backend/: AGENTS.md  Cargo.toml  Tupfile  a.rs  build.rs  build.sh  build_wasm.sh  ct_types.json  db_backend_test_for_bisect.sh  index.html  index.js  lldbinit.py  notes.md  out.json  task.md  transport_spec.md  worker.js
src/db-backend/.cargo/: config.toml
src/db-backend/.cargo-wasm-backup-setup/: config.toml
src/db-backend/benches/: tracepoint_interpreter.rs
src/db-backend/db-backend-core/: Cargo.toml  index.js  worker.js
src/db-backend/db-backend-wasm/: Cargo.toml  worker.js
src/db-backend/loop-trace/: trace.json
src/db-backend/spec_dap/: spec_dap.md
src/db-backend/src/: autoformat.rs  bench_matrix_report.rs  build.rs  c_compat.rs  calltrace.rs  catalog_autoload.rs  communication.rs  core.rs  correlation_index.rs  correlation_markers.rs  cross_process_origin.rs  dap.rs  dap_client.rs  dap_error.rs  dap_handler.rs  dap_server.rs  dap_types.rs  data_watch.rs  db.rs  diff.rs  distinct_vec.rs  dwarf_index.rs  eager_origin_mode.rs  emulator_ffi.rs  emulator_origin.rs  emulator_session.rs  emulator_wasm_libc_shims.rs  event_db.rs  expr_loader.rs  flow_preloader.rs  handler.rs  in_memory_trace_reader.rs  lang.rs  lazy_omniscient_prep_trigger.rs  lib.rs  macro_sourcemap.rs  main.rs  native_rr_omniscient_prep.rs  nim_mangling.rs  omniscient_db.rs  (+28 more)
src/db-backend/test-programs/: elixir  erlang
src/db-backend/tests/: ada_mcr_streaming_flow_test.rs  aiken_flow_dap_test.rs  autoformat_minified.rs  autoformat_minified_python.rs  bash_flow_integration.rs  cadence_flow_dap_test.rs  cairo_fixture_gli_decode.rs  cairo_flow_dap_test.rs  catalog_autoload.rs  circom_flow_dap_test.rs  collapse_server_prep_crossread_test.rs  correlation_markers_test.rs  cow_namespace_crossread_test.rs  cpp_mcr_streaming_flow_test.rs  cross_process_cli_test.rs  cross_process_dispatcher_wiring_test.rs  cross_process_gui_skip_test.rs  cross_process_origin_test.rs  cross_process_viewmodel_wire_test.rs  ctfs_call_args_roundtrip_test.rs  ctfs_column_capability_flags_test.rs  ctfs_default_rust_writer_bundle_test.rs  ctfs_lazy_production_steps_test.rs  ctfs_lazy_production_values_test.rs  ctfs_split_only_full_db_test.rs  ctfs_step_locations_bulk_test.rs  d_mcr_streaming_flow_test.rs  dap_backend_server.rs  dap_backend_stdio.rs  dap_backend_tcp.rs  dap_column_breakpoint.rs  dap_column_breakpoint_with_condition.rs  dap_column_cairo.rs  dap_column_evm.rs  dap_column_flow.rs  dap_column_move.rs  dap_column_nim.rs  dap_column_noir.rs  dap_column_polkavm.rs  dap_column_solana.rs  (+107 more)
src/db-backend/tests/common/: mod.rs  (+3 more)
src/db-backend/trace/: trace.json  trace_metadata.json  trace_paths.json
src/db-backend/tree-sitter-trace/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  Tupfile  binding.gyp  grammar.js  setup.py  tracepoint_syntax_example.rs
src/db-backend/wasm-testing/: index.html  index.js  replay-test.html  replay-test.js  worker.js
src/small-lang/: Cargo.toml  Tupfile  call.small  call.small.plan  loop.small  modify_ref.small  replit.nix  replit_zip_error_log.txt  trace_metadata.json
src/small-lang/src/: lang.rs  main.rs  node.rs  parser.rs  position.rs  task.rs  value.rs
src/small-lang/tests/: basic.rs
src/tui/: AGENTS.md  Cargo.toml  Tupfile
src/tui/src/: actions.rs  commented_out_socket_code.rs  component.rs  core.rs  dap_client.rs  editor_component.rs  event.rs  lang.rs  main.rs  panel.rs  paths.rs  simple_main.rs  simple_tui.rs  state_component.rs  status_component.rs  task.rs  value.rs  window.rs
src/tui/trace/: trace_paths.json
(+7111 files in other folders)
