[metadata]
name = codetracer
version = 0.1.0
description = Platform specific wrapper around the ct binary
long_description = file: README.md
long_description_content_type = text/markdown
author = TODO: Fill in author
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
ct = bin/*/*

[options.entry_points]
console_scripts =
    ct = ct.cli:main
    db-backend-record = ct.cli:db_backend_record_main
