[metadata]
name = codetracer
version = 25.10.1
description = Time-traveling debugger for polyglot codebases
long_description = file: README.md
long_description_content_type = text/markdown
author = Metacraft Labs Ltd.
author_email = community@codetracer.com
url = https://codetracer.com
license = AGPL-3.0-or-later
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Debuggers
project_urls =
    Homepage = https://codetracer.com
    Documentation = https://docs.codetracer.com
    Repository = https://github.com/metacraft-labs/codetracer
    Issues = https://github.com/metacraft-labs/codetracer/issues

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.12,<3.14
install_requires =
    codetracer-python-recorder>=0.3.0
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
ct = bin/*/*

[options.entry_points]
console_scripts =
    ct = ct.cli:main
    db-backend-record = ct.cli:db_backend_record_main
    ct-remote = ct.cli:ct_remote_main
