[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codetracer"
version = "0.1.0"
description = "CodeTracer Trace Query API - programmatic access to time-travel debugging traces"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.0"]
