[package]
name = "ct-dap-client"
version = "0.1.0"
edition = "2021"
description = "DAP client library for CodeTracer's db-backend, covering the full CodeTracer DAP protocol and extensions."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
log = "0.4"
