[package]
name = "replay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = { version = "*", optional = true }

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
log = "0.4.21"
env_logger = "0.11.3"
# log2 = "0.1.11"
regex = "1"
indexmap = "1.9.3"
once_cell = "1.10.0"

console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }

schemars = "0.8.2"
schemars-zod = "0.1.5"

futures = "0.3.30"
futures-timer = "3.0.3"
clap = { version = "4.5.4", features = ["derive"] }
codetracer_trace_types = { path = "../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_reader = { path = "../../../codetracer-trace-format/codetracer_trace_reader" }
codetracer_trace_writer = { path = "../../../codetracer-trace-format/codetracer_trace_writer" }
codetracer_ctfs = { path = "../../../codetracer-trace-format/codetracer_ctfs" }
codetracer_trace_writer_nim = { path = "../../../codetracer-trace-format/codetracer_trace_writer_nim", optional = true }
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
num-bigint = "0.4.6"
chrono = "0.4.41"

serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "DedicatedWorkerGlobalScope",
  "WorkerGlobalScope",
  "console",
  "MessageEvent",
  "Worker",
  "Window",
] }

vfs = "0.12"

shellexpand = { version = "3.1.1", optional = true }

ntest = "0.9.3"

# tree-sitter dependencies — only needed for syntax highlighting / source
# analysis.  Gated behind the `syntax-highlight` feature so that WASM builds
# (which cannot compile the C grammars) can omit them.
tree-sitter = { version = "*", optional = true }
# helper lib:
tree-sitter-traversal2 = { version = "0.2.0", optional = true }
# language-specific grammar bindings:
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-pascal = { version = "0.10.0", optional = true }
tree-sitter-d = { version = "0.8.2", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-nim = { path = "../../libs/tree-sitter-nim/bindings/rust", optional = true }

# the binding for our custom tracepoint tresitter grammar:
tree-sitter-tracepoint = { path = "./tree-sitter-trace/", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-bash = { version = "0.23.3", optional = true }
tree-sitter-solidity = { version = "1.2", optional = true }
# blockchain-specific grammar bindings (all via git submodules in libs/):
tree-sitter-cairo = { path = "../../libs/tree-sitter-cairo", optional = true }
tree-sitter-aiken = { path = "../../libs/tree-sitter-aiken", optional = true }
tree-sitter-move-on-aptos = { path = "../../libs/tree-sitter-move-on-aptos", optional = true }
tree-sitter-sway = { path = "../../libs/tree-sitter-sway", optional = true }
tree-sitter-circom = { path = "../../libs/tree-sitter-circom", optional = true }
tree-sitter-leo = { path = "../../libs/tree-sitter-leo", optional = true }
tree-sitter-tolk = { path = "../../libs/tree-sitter-tolk", optional = true }
tree-sitter-masm = { path = "../../libs/tree-sitter-masm/bindings/rust", optional = true }
tree-sitter-cadence = { path = "../../libs/tree-sitter-cadence/bindings/rust", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
] }

[lib]
name = "db_backend"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "replay-server"
path = "src/main.rs"
required-features = ["io-transport"]

[[bin]]
name = "virtualization-layers"
path = "src/bin/virtualization-layers.rs"
required-features = ["io-transport"]

[[bin]]
name = "schema-generator"
path = "src/bin/schema_generator.rs"
required-features = ["io-transport"]

[dev-dependencies]
ct-dap-client = { path = "../../libs/ct-dap-client" }
tempfile = "3"

[features]
debugging = []

default = ["io-transport", "syntax-highlight", "nim-reader"]

io-transport = ["dep:shellexpand"]

# Pulls in tree-sitter and all language grammars for source code analysis,
# variable extraction, and tracepoint compilation.  Disable for WASM builds
# where the C grammars cannot be cross-compiled.
syntax-highlight = [
  "dep:cc",
  "dep:tree-sitter",
  "dep:tree-sitter-traversal2",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-c",
  "dep:tree-sitter-cpp",
  "dep:tree-sitter-pascal",
  "dep:tree-sitter-d",
  "dep:tree-sitter-ruby",
  "dep:tree-sitter-python",
  "dep:tree-sitter-nim",
  "dep:tree-sitter-tracepoint",
  "dep:tree-sitter-go",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-bash",
  "dep:tree-sitter-solidity",
  "dep:tree-sitter-cairo",
  "dep:tree-sitter-aiken",
  "dep:tree-sitter-move-on-aptos",
  "dep:tree-sitter-sway",
  "dep:tree-sitter-circom",
  "dep:tree-sitter-leo",
  "dep:tree-sitter-tolk",
  "dep:tree-sitter-masm",
  "dep:tree-sitter-cadence",
]
nim-reader = ["dep:codetracer_trace_writer_nim"]
browser-transport = [
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:console_error_panic_hook",
  "dep:wasm-logger",
]
