[package]
name = "replay-server"
version = "0.1.0"
# edition 2024: src/paths.rs uses stabilized let-chains (`if let X = ... && Y`),
# which require edition 2024 or later. The sibling `codetracer_trace_writer` /
# `codetracer_trace_reader` crates are already on 2024.
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# Always needed: build.rs links the Nim MCR emulator's generated C output
# into the crate via cc::Build (F5c-1, native target).
cc = "1"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
log = "0.4.21"
env_logger = "0.11.3"
# log2 = "0.1.11"
regex = "1"
indexmap = "1.9.3"
once_cell = "1.10.0"
# Used by paths::gc_stale_run_dirs to send signal 0 to candidate PIDs
# (cheap liveness probe) before reclaiming their per-run sockets/logs
# under $XDG_RUNTIME_DIR/codetracer/.  libc is already in the transitive
# graph; pinning it explicitly keeps the gc compile target-stable.
libc = "0.2"

console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }

schemars = "0.8.2"
schemars-zod = "0.1.5"

futures = "0.3.30"
futures-timer = "3.0.3"
clap = { version = "4.5.4", features = ["derive"] }
codetracer_trace_types = { path = "../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_reader = { path = "../../../codetracer-trace-format/codetracer_trace_reader" }
codetracer_trace_writer = { path = "../../../codetracer-trace-format/codetracer_trace_writer" }
codetracer_ctfs = { path = "../../../codetracer-trace-format/codetracer_ctfs" }
codetracer_trace_writer_nim = { path = "../../../codetracer-trace-format/codetracer_trace_writer_nim", optional = true }
# Value Origin Tracking classifier (M1). The db-backend is the only
# consumer at replay time — recorders do NOT depend on this crate
# (per Value-Origin-Tracking GUI spec §7 and milestones M1, M2).
origin-classifier = { path = "../../libs/origin-classifier" }
# SHA-256 hashing for OriginContinuationToken source-digest verification
# (spec §5.3.1). M1 already depends on `sha2` transitively but the
# db-backend uses the digest directly so we wire it explicitly.
sha2 = "0.10"
# base64url encoding for the opaque continuation token payload
# (spec §5.3.1 "opaque base64url JSON").
base64 = "0.22"
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
num-bigint = "0.4.6"
chrono = "0.4.41"

serde-wasm-bindgen = { version = "0.6.5", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

# uuid is pulled transitively by codetracer_trace_types with the `v7`
# feature. Since uuid 1.23 the `v7` generator no longer implies a
# randomness backend: on wasm32 it needs `RngImp`, which is only
# compiled in when one of `rng-getrandom` / `rng-rand` / `js` is on.
# We depend on uuid directly with `js` so Cargo's feature unification
# enables the browser RNG for the whole graph in the browser-transport
# build (the dependency is otherwise unused here and stays inert for
# native builds, where browser-transport is off).
uuid = { version = "1.10", default-features = false, optional = true, features = [
  "js",
] }
# Some transitive crates still use getrandom 0.2 directly; enable its browser
# backend explicitly for wasm32-unknown-unknown browser-transport builds.
getrandom = { version = "0.2", optional = true, features = ["js"] }
web-sys = { version = "0.3", optional = true, features = [
  "DedicatedWorkerGlobalScope",
  "Headers",
  "WorkerGlobalScope",
  "Request",
  "RequestInit",
  "Response",
  "Window",
  "console",
  "MessageEvent",
  "Worker",
  "Window",
] }

vfs = "0.12"

# P0.7: HTTP client for the LazyOmniscientPrepTrigger that POSTs to the
# Monolith's /api/v1/storage/recordings/{id}/omniscient-prep/trigger
# endpoint. `ureq` is a blocking, dependency-light client (no tokio
# runtime); the trigger lives on the per-session dispatcher thread so
# blocking I/O is fine. The crate is already in the transitive
# dependency graph via codetracer_ctfs.
ureq = { version = "2.10", default-features = false, features = ["tls"] }

shellexpand = { version = "3.1.1", optional = true }

# DWARF parsing (M-DWARF-1). These three crates form the de-facto pure-Rust
# stack for symbolicating native PCs back to (file, line, function):
#   * `object`    — ELF (and other) container parsing.
#   * `gimli`     — DWARF section parsing.
#   * `addr2line` — high-level PC -> source location index built on gimli.
#
# All three are no_std-friendly when their default features are turned off
# and they vendor no C dependencies, so they compile cleanly to wasm32 for
# the browser-replay build. We deliberately avoid:
#   * `addr2line/loader`  — pulls in `memmap2` (POSIX mmap; wasm-hostile).
#   * `addr2line/cpp_demangle` — pulls in C++ demangler with heavier deps;
#     M-DWARF-1 leaves demangling raw, M-DWARF-2/3 can switch it on if
#     Rust/C++ traces show up.
#   * `object/compression` — flate2/ruzstd not needed for the small
#     uncompressed DWARF the MCR recorder will emit; reduces wasm size.
addr2line = { version = "0.26", default-features = false, features = [
  "std",
  "fallible-iterator",
  "rustc-demangle",
] }
gimli = { version = "0.33", default-features = false, features = [
  "read",
  "std",
  "endian-reader",
] }
object = { version = "0.39", default-features = false, features = [
  "read_core",
  "elf",
  "std",
] }

ntest = "0.9.3"

# Column-Aware-Tracing-And-Deminification §P5 — user-provided variable
# rename list lives in `<recording-dir>/renames.toml`.  The crate is
# already in the transitive dependency graph (origin-classifier pulls
# it in), but we declare it as a direct dependency so the §P5 module
# stays self-contained and the dependency stays visible in the audit
# trail.
toml = "0.8"

# tree-sitter dependencies — only needed for syntax highlighting / source
# analysis.  Gated behind the `syntax-highlight` feature so that WASM builds
# (which cannot compile the C grammars) can omit them.
tree-sitter = { version = "*", optional = true }
# helper lib:
tree-sitter-traversal2 = { version = "0.2.0", optional = true }
# language-specific grammar bindings:
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-pascal = { version = "0.10.0", optional = true }
tree-sitter-d = { version = "0.8.2", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-nim = { path = "../../libs/tree-sitter-nim/bindings/rust", optional = true }

# the binding for our custom tracepoint tresitter grammar:
tree-sitter-tracepoint = { path = "./tree-sitter-trace/", optional = true }

# Source Map V3 translation library (Column-Aware-Tracing-And-Deminification §P3).
# Workspace-shared crate under `codetracer-trace-format/sourcemap-translate/` —
# wraps the `sourcemap` crate from crates.io with a 1-indexed surface and the
# `discover_sourcemap_for` helper the trace-open hook uses to find
# `<source>.map` siblings + parse `//# sourceMappingURL=...` comments.
# Promoted out of `db-backend/` in P6.1 so future P6.2 (recorder
# pre-record formatting) and P7 (`codetracer-mapping-tools/`) can
# consume it without duplicating the implementation.
sourcemap-translate = { path = "../../../codetracer-trace-format/sourcemap-translate" }

# Column-Aware-Tracing-And-Deminification §P8 — shared catalog crate
# under `codetracer-trace-format/mapping-catalog/`.  Pulled in by the
# trace-open autoload hook (`catalog_autoload.rs`) so the replay-server
# and `ct-mapping-tools` agree on catalog layout + lookup semantics.
mapping-catalog = { path = "../../../codetracer-trace-format/mapping-catalog" }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
tree-sitter-bash = { version = "0.23.3", optional = true }
tree-sitter-solidity = { version = "1.2", optional = true }
# blockchain-specific grammar bindings (all via git submodules in libs/):
tree-sitter-cairo = { path = "../../libs/tree-sitter-cairo", optional = true }
tree-sitter-aiken = { path = "../../libs/tree-sitter-aiken", optional = true }
tree-sitter-move-on-aptos = { path = "../../libs/tree-sitter-move-on-aptos", optional = true }
tree-sitter-sway = { path = "../../libs/tree-sitter-sway", optional = true }
tree-sitter-circom = { path = "../../libs/tree-sitter-circom", optional = true }
tree-sitter-leo = { path = "../../libs/tree-sitter-leo", optional = true }
tree-sitter-tolk = { path = "../../libs/tree-sitter-tolk", optional = true }
tree-sitter-masm = { path = "../../libs/tree-sitter-masm/bindings/rust", optional = true }
tree-sitter-cadence = { path = "../../libs/tree-sitter-cadence/bindings/rust", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
] }

[lib]
name = "db_backend"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "replay-server"
path = "src/main.rs"
required-features = ["io-transport"]

[[bin]]
name = "virtualization-layers"
path = "src/bin/virtualization-layers.rs"
required-features = ["io-transport"]

[[bin]]
name = "schema-generator"
path = "src/bin/schema_generator.rs"
required-features = ["io-transport"]

[dev-dependencies]
ct-dap-client = { path = "../../libs/ct-dap-client" }
tempfile = "3"
# Performance + E2E Coverage campaign P4.6 / P9.2: the
# tracepoint_interpreter Criterion bench at benches/tracepoint_interpreter.rs.
# default-features = false drops criterion's `rayon` + `plotters`
# HTML-report dependencies, which we don't need (the bench emits its
# own CSV/JSON/Markdown matrix report through
# `db_backend::bench_matrix_report`).
criterion = { version = "0.5", default-features = false }

# P4.6 / P9.2 — register the tracepoint_interpreter Criterion bench.
# `harness = false` so Criterion's `criterion_main!` macro provides
# its own main() instead of the default libtest harness (Criterion's
# CLI flags + sampling loop are incompatible with the libtest one).
[[bench]]
name = "tracepoint_interpreter"
harness = false

[features]
debugging = []

default = ["io-transport", "syntax-highlight", "nim-reader"]

io-transport = ["dep:shellexpand"]

# Pulls in tree-sitter and all language grammars for source code analysis,
# variable extraction, and tracepoint compilation.  Disable for WASM builds
# where the C grammars cannot be cross-compiled.
syntax-highlight = [
  "dep:tree-sitter",
  "dep:tree-sitter-traversal2",
  "dep:tree-sitter-rust",
  "dep:tree-sitter-c",
  "dep:tree-sitter-cpp",
  "dep:tree-sitter-pascal",
  "dep:tree-sitter-d",
  "dep:tree-sitter-ruby",
  "dep:tree-sitter-python",
  "dep:tree-sitter-nim",
  "dep:tree-sitter-tracepoint",
  "dep:tree-sitter-go",
  "dep:tree-sitter-javascript",
  "dep:tree-sitter-bash",
  "dep:tree-sitter-solidity",
  "dep:tree-sitter-cairo",
  "dep:tree-sitter-aiken",
  "dep:tree-sitter-move-on-aptos",
  "dep:tree-sitter-sway",
  "dep:tree-sitter-circom",
  "dep:tree-sitter-leo",
  "dep:tree-sitter-tolk",
  "dep:tree-sitter-masm",
  "dep:tree-sitter-cadence",
]
nim-reader = ["dep:codetracer_trace_writer_nim"]
browser-transport = [
  "dep:serde-wasm-bindgen",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:web-sys",
  "dep:console_error_panic_hook",
  "dep:wasm-logger",
  # Enable uuid's wasm RNG backend (RngImp) so `Uuid::now_v7` in
  # codetracer_trace_types links on wasm32.
  "dep:uuid",
  "dep:getrandom",
]
