[package]
name = "small-lang"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
# Migrated off the pre-v3 `runtime_tracing` crate to the in-tree CTFS
# writer that every other CodeTracer recorder uses (see Recorder-CLI-
# Conventions.md §4 and follow-up #254).  Re-exports `EventLogKind`,
# `Line`, `Place`, `TypeId`, `TypeKind`, `ValueRecord`, `NONE_VALUE`,
# and the `TraceWriter` trait via `codetracer_trace_types` so the
# in-source API surface stays nearly identical.
codetracer_trace_types = { path = "../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer_nim = { path = "../../../codetracer-trace-format/codetracer_trace_writer_nim" }
