[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
# ratatui = "0.26.1"
home = "0.5.9"
sqlite = "0.34.0"
tokio = {version = "1.37.0", features=["full", "rt", "net", "signal"]}
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
notify = "6.1.1"
futures = "0.3.30"
futures-timer = "3.0.3"
tempfile = "3.20.0"
ratatui = "0.29.0"
