[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
# ratatui = "0.26.1"
home = "0.5.9"
sqlite = "0.34.0"
tokio = { version = "1.38.2", features = ["full", "rt", "net", "signal"] }
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
notify = "8.2.0"
futures = "0.3.30"
futures-timer = "3.0.3"
ratatui = "0.29.0"
log = "0.4.27"
env_logger = "0.11.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }

[[bin]]
name = "simple-tui"
path = "src/simple_main.rs"
