[package]
name = "db-backend-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "db_backend_wasm"
path = "src/wasm.rs"              # <-- tell Cargo your file isn't lib.rs
crate-type = ["cdylib"]           # required for wasm-bindgen/wasm-pack

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[features]
default = []

[dependencies.web-sys]
version = "0.3"
features = ["DedicatedWorkerGlobalScope", "MessageEvent", "Worker", "console"]
